--- a/backend/login.ejs
+++ b/backend/login.ejs
@@ -8,7 +8,7 @@
 <body>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form action="/login" method="POST">
 			<h1>Create Account</h1>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -16,9 +16,9 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input id="username" type="text" name="username" placeholder="Name" />
+			<input id="email" type="text" name="email" placeholder="Email" />
+			<input id="password" type="password" name="password" placeholder="Password" />
 			<button>Sign Up</button>
 		</form>
 	</div>
